--- a/Preprocessing/Machine_Learning.ipynb
+++ b/Preprocessing/Machine_Learning.ipynb
@@ -345,7 +345,7 @@
       },
       "cell_type": "code",
       "source": [
-        "from sklearn.preprocessing import LabelEncoder"
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
       ],
       "execution_count": 0,
       "outputs": []
@@ -406,6 +406,64 @@
     {
       "metadata": {
         "id": "97UtLDI58r28",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "onehotencoder = OneHotEncoder(categorical_features=[0])\n",
+        "X= onehotencoder.fit_transform(X).toarray()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "S058HCew-VSX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "labelencoder_Y = LabelEncoder()\n",
+        "Y=labelencoder_Y.fit_transform(Y)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "YLWUcWML-Z7s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "05884cce-dd77-4420-ee2a-b088be031e11"
+      },
+      "cell_type": "code",
+      "source": [
+        "X.shape"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hPhiBp-j-oMI",
         "colab_type": "code",
         "colab": {}
       },
