--- a/Preprocessing/Machine_Learning.ipynb
+++ b/Preprocessing/Machine_Learning.ipynb
@@ -31,25 +31,21 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 55
         },
-        "outputId": "72c8f3eb-ec54-4cc5-b9bb-e2737482535e"
+        "outputId": "0d9e3357-247f-46c9-9ffc-28bfecb067b6"
       },
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -67,7 +63,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!wget http://www.superdatascience.com/wp-content/uploads/2017/02/Data_Preprocessing.zip"
+        "/!wget http://www.superdatascience.com/wp-content/uploads/2017/02/Data_Preprocessing.zip"
       ],
       "execution_count": 2,
       "outputs": [
@@ -435,35 +431,31 @@
       "metadata": {
         "id": "YLWUcWML-Z7s",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "05884cce-dd77-4420-ee2a-b088be031e11"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "X.shape"
+        "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10, 5)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "hPhiBp-j-oMI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=0.2,random_state = 42)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "iQHU7ISWezke",
         "colab_type": "code",
         "colab": {}
       },
